--- a/client/index.html
+++ b/client/index.html
@@ -64,6 +64,7 @@
           <script src="app/account/settings/settings.module.js"></script>
           <script src="app/account/signup/signup.module.js"></script>
           <script src="app/admin/admin.module.js"></script>
+          <script src="app/dashboard/dashboard.module.js"></script>
           <script src="app/home/home.module.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/login/login.state.js"></script>
@@ -73,6 +74,8 @@
           <script src="app/account/signup/signup.state.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.state.js"></script>
+          <script src="app/dashboard/dashboard.controller.js"></script>
+          <script src="app/dashboard/dashboard.state.js"></script>
           <script src="app/home/home.controller.js"></script>
           <script src="app/home/home.state.js"></script>
           <script src="components/auth/auth.service.js"></script>
