--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -2,9 +2,9 @@
 
 <header class="hero-unit" id="banner">
   <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
+    <h1>event.cntxt</h1>
+    <p class="lead">organize your next even with event.cntxt</p>
+    <img src="assets/images/beacon.png" alt="Beacon" height=100px width=70px>
   </div>
 </header>
 
@@ -21,8 +21,5 @@
 
 <footer class="footer">
   <div class="container">
-      <p>Angular Fullstack v1.0.1 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/tashrafy/generator-sql-fullstack/issues?state=open">Issues</a></p>
   </div>
 </footer>
