--- a/client/index.html
+++ b/client/index.html
@@ -54,6 +54,8 @@
       <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
       <script src="bower_components/lodash/dist/lodash.compat.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+      <script src="bower_components/firebase/firebase.js"></script>
+      <script src="bower_components/angularfire/dist/angularfire.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -64,6 +66,7 @@
           <script src="app/account/settings/settings.module.js"></script>
           <script src="app/account/signup/signup.module.js"></script>
           <script src="app/admin/admin.module.js"></script>
+          <script src="app/dashboard/dashboard.module.js"></script>
           <script src="app/home/home.module.js"></script>
           <script src="app/account/login/login.controller.js"></script>
           <script src="app/account/login/login.state.js"></script>
@@ -73,10 +76,13 @@
           <script src="app/account/signup/signup.state.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.state.js"></script>
+          <script src="app/dashboard/dashboard.controller.js"></script>
+          <script src="app/dashboard/dashboard.state.js"></script>
           <script src="app/home/home.controller.js"></script>
           <script src="app/home/home.state.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
+          <script src="components/firebase/firebase.js"></script>
           <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/sql-error/sql-error.directive.js"></script>
