--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -3,18 +3,48 @@
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>event.cntxt</h1>
-    <p class="lead">organize your next even with event.cntxt</p>
+    <p class="lead">organize your next event with event.cntxt</p>
     <img src="assets/images/beacon.png" alt="Beacon" height=100px width=70px>
   </div>
 </header>
+<br>
+<br>
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in homeCtrl.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+    <div class="col-sm-6">
+      <div class="centerBlock">
+        <div class="icon">
+          <i class="fa fa-check fa-4x"></i>
+        </div>
+        <h4>Streamline Check-In</h4>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="centerBlock">
+        <div class="icon">
+          <i class="fa fa-line-chart fa-4x"></i>
+        </div>
+          <h4>Gather Live Data</h4>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="centerBlock">
+        <div class="icon">
+          <i class="fa fa-commenting-o fa-4x"></i>
+        </div>
+        <h4>Keep Everyone Up to Date</h4>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="centerBlock">
+        <div class="icon">
+          <i class="fa fa-car fa-4x"></i>
+        </div>
+        <h4>Simplify Transportation</h4>
+      </div>
     </div>
   </div>
 </div>
