--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -2,57 +2,37 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-12 centered-terms">
       <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
     </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="loginCtrl.login(form)" novalidate>
+    <div class="col-sm-3">
+    </div>
+    <div class="col-sm-6">
 
-        <div class="form-group">
-          <label>Email</label>
 
-          <input type="email" name="email" class="form-control" ng-model="loginCtrl.user.email" required>
-        </div>
+        <form name ="userForm">
+          <div layout-gt-md="row">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Email</label>
+              <input type="email">
+            </md-input-container>
+          </div>
+          <div layout-gt-md="row">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Password</label>
+              <input>
+            </md-input-container>
+          </div>
+        </form>
+      
+      <div layout="row" layout-align="center center">
+      <md-button class="md-primary md-raised form-submit-button">Login</md-button>
+    </div>
 
-        <div class="form-group">
-          <label>Password</label>
-
-          <input type="password" name="password" class="form-control" ng-model="loginCtrl.user.password" required>
-        </div>
-
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && loginCtrl.submitted">
-             Please enter your email and password.
-          </p>
-          <p class="help-block" ng-show="form.email.$error.email && loginCtrl.submitted">
-             Please enter a valid email.
-          </p>
-
-          <p class="help-block">{{ loginCtrl.errors.other }}</p>
-        </div>
-
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
-            Register
-          </a>
-        </div>
-
-        <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="loginCtrl.loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginCtrl.loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-        </div>
-      </form>
+    </div>
+    <div class="col-sm-3">
     </div>
   </div>
+    <p class="centered-terms">Not a member yet?  Sign up&nbsp<a ui-sref="signup">here</a>.</p>
   <hr>
 </div>
