--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -24,9 +24,9 @@
             </md-input-container>
           </div>
         </form>
-      
+
       <div layout="row" layout-align="center center">
-      <md-button class="md-primary md-raised form-submit-button">Login</md-button>
+      <md-button class="md-primary md-raised form-submit-button">Sign Up</md-button>
     </div>
 
     </div>
@@ -34,5 +34,4 @@
     </div>
   </div>
     <p class="centered-terms">Not a member yet?  Sign up&nbsp<a ui-sref="signup">here</a>.</p>
-  <hr>
 </div>
