--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
           <script src="app/account/signup/signup.state.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.state.js"></script>
+          <script src="app/dashboard/addEventModal.controller.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.state.js"></script>
           <script src="app/home/home.controller.js"></script>
@@ -89,7 +90,6 @@
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/firebase/firebase.js"></script>
-          <script src="components/modal/modal.service.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/sql-error/sql-error.directive.js"></script>
           <!-- endinjector -->
