add beacon modal

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,3 +1,4 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<button ng-click="dashboardCtrl.openAddEventModal()">AddEvent</button>
+<button ng-click="dashboardCtrl.openAddEventModal()">Add Event</button>
+<button ng-click="dashboardCtrl.openAddBeaconModal()">Add Beacon</button>
