--- a/client/index.html
+++ b/client/index.html
@@ -82,6 +82,7 @@
           <script src="app/account/signup/signup.state.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.state.js"></script>
+          <script src="app/dashboard/addBeaconModal.controller.js"></script>
           <script src="app/dashboard/addEventModal.controller.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.state.js"></script>
