--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,3 +1,13 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <button ng-click="dashboardCtrl.openAddEventModal()">AddEvent</button>
+
+
+<md-select ng-model="dashboardCtrl.star">
+    <md-option><em>None</em></md-option>
+    <md-option>Sample Beacon Minor: 59F2SGR4903R</md-option>
+    <md-option>Sample Beacon Minor: 59F2SGR4903R</md-option>
+    <md-option>Sample Beacon Minor: 59F2SGR4903R</md-option>
+    <md-option>Sample Beacon Minor: 59F2SGR4903R</md-option>
+
+  </md-select>
