--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,3 +1,7 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <button ng-click="dashboardCtrl.openAddEventModal()">AddEvent</button>
+<h1>events</h1>
+<div ng-repeat="event in dashboardCtrl.events track by $index">
+    <p> {{event.name}} </p>
+</div>
