--- a/client/index.html
+++ b/client/index.html
@@ -62,6 +62,8 @@
       <script src="bower_components/angular-material/angular-material.js"></script>
       <script src="bower_components/firebase/firebase.js"></script>
       <script src="bower_components/angularfire/dist/angularfire.js"></script>
+      <script src="bower_components/moment/moment.js"></script>
+      <script src="bower_components/angular-moment/angular-moment.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
