--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,10 +1,9 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<button ng-click="dashboardCtrl.openAddBeaconModal()">Add Beacon</button>
+<!---<button ng-click="dashboardCtrl.openAddBeaconModal()">Add Beacon</button> --->
 
 <div class="container">
   <div class="row">
     <div ui-view></div>
   </div>
 </div>
-
