single event page

--- a/client/app/dashboard/myEvents.html
+++ b/client/app/dashboard/myEvents.html
@@ -11,7 +11,7 @@
         </md-card-title-text>
       </md-card-title>
       <md-card-actions layout="row" layout-align="end center">
-        <md-button>Add Beacons</md-button>
+        <md-button><a ui-sref="event({eventId: event.key})">View Details</a></md-button>
         <md-button>Add Sites</md-button>
       </md-card-actions>
     </md-card>
