--- a/client/index.html
+++ b/client/index.html
@@ -88,6 +88,7 @@
           <script src="app/dashboard/addEventModal.controller.js"></script>
           <script src="app/dashboard/dashboard.controller.js"></script>
           <script src="app/dashboard/dashboard.state.js"></script>
+          <script src="app/dashboard/event.controller.js"></script>
           <script src="app/home/home.controller.js"></script>
           <script src="app/home/home.state.js"></script>
           <script src="components/auth/auth.service.js"></script>
