--- a/client/app/user-registration/user-registration-success.html
+++ b/client/app/user-registration/user-registration-success.html
@@ -1,7 +1,11 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-4 col-sm-offset-4">
-            <h3>See you at the event</h3>
+      <div class="col-sm-4">
+      </div>
+        <div class="col-sm-4">
+            <h3>Thanks for registering. <br> See you at the event!</h3>
+        </div>
+        <div class="col-sm-4">
         </div>
     </div>
 </div>
