--- a/client/app/user-registration/user-registration.html
+++ b/client/app/user-registration/user-registration.html
@@ -1,11 +1,32 @@
 <div class="container">
     <div class="row">
+      <div class="col-sm-12 centered-terms">
+        <h1>Event Registration</h1>
+      </div>
         <div class="col-sm-4 col-sm-offset-4">
             <form name="form" ng-submit="userRegistrationCtrl.submit(form)">
-                <input type="email" ng-model="userRegistrationCtrl.registration.email">Email</input>
-                <input type="name" ng-model="userRegistrationCtrl.registration.name">Name</input>
-                <input type="phone" ng-model="userRegistrationCtrl.registration.phone">Phone Number</input>
-                <button type="submit">register for event</button>
+              <div layout-gt-md="row" class="registrationField">
+                <md-input-container class="md-block" flex-gt-sm>
+                  <label>Name</label>
+                  <input ng-model="userRegistrationCtrl.registration.name" type="name">
+                </md-input-container>
+              </div>
+              <div layout-gt-md="row" class="registrationField">
+                <md-input-container class="md-block" flex-gt-sm>
+                  <label>Email</label>
+                  <input ng-model="userRegistrationCtrl.registration.email" type="email">
+                </md-input-container>
+              </div>
+
+              <div layout-gt-md="row" class="registrationField">
+                <md-input-container class="md-block" flex-gt-sm>
+                  <label>Phone Number</label>
+                  <input ng-model="userRegistrationCtrl.registration.phone" type="phone">
+                </md-input-container>
+              </div>
+
+              <div layout="row" layout-align="center center">
+              <md-button type="submit" class="md-primary md-raised form-submit-button">Register for Event</md-button>
             </form>
         </div>
     </div>
