individual events page

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,3 +1,4 @@
+<title>Dashboard</title>
 <div ng-include="'components/navbar/navbar.html'"></div>
 
 <!---<button ng-click="dashboardCtrl.openAddBeaconModal()">Add Beacon</button> --->
