--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -77,7 +77,7 @@
         <li>Once they sign into the app, your event will appear in their Upcoming Events.</li>
       </ol>
     </div>
-    
+
     <div class="col-sm-5">
       <ol start="5">
         <li>On the day of your event, set up your beacons at check-in and anywhere else you want to track foot-traffic.</li>
@@ -93,5 +93,6 @@
 
 <footer class="footer">
   <div class="container">
+    <p>&copy; 2016</p>
   </div>
 </footer>
