--- a/client/app/dashboard/myEvents.html
+++ b/client/app/dashboard/myEvents.html
@@ -12,7 +12,7 @@
       <md-card-title>
         <md-card-title-text>
 
-          <span class="md-datetime"><i class="fa fa-calendar fa-1.5x"></i>&nbsp{{event.datetime | amDateFormat: 'dddd, MMMM do YYYY, h:mm a'}}</span>
+          <span class="md-datetime"><i class="fa fa-calendar fa-1.5x"></i>&nbsp{{event.datetime | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a'}}</span>
           <span class="md-address"> <i class="fa fa-map-marker fa-1.5x"></i>&nbsp{{event.address}}</span>
         </md-card-title-text>
       </md-card-title>
