--- a/client/app/dashboard/event.html
+++ b/client/app/dashboard/event.html
@@ -7,7 +7,7 @@
       <md-card-title>
         <md-card-title-text>
 
-          <span class="md-datetime"><i class="fa fa-calendar fa-1.5x"></i>&nbsp{{eventCtrl.eventDateTime | amDateFormat: 'dddd, MMMM do YYYY, h:mm a'}}</span>
+          <span class="md-datetime"><i class="fa fa-calendar fa-1.5x"></i>&nbsp{{eventCtrl.eventDateTime | amDateFormat: 'dddd, MMMM Do YYYY, h:mm a'}}</span>
           <span class="md-address"> <i class="fa fa-map-marker fa-1.5x"></i>&nbsp{{eventCtrl.eventLocation}}</span>
           <span class="md-register"> <i class="fa fa-sign-in fa-1.5x"></i> Guests can register for your event at:&nbsp<a href="http://localhost:9000/user-registration/{{eventCtrl.eventKey}}">http://localhost:9000/user-registration/{{eventCtrl.eventKey}}</a></span>
         </md-card-title-text>
