--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -18,7 +18,7 @@
           <i class="fa fa-check fa-4x"></i>
         </div>
         <h4>Streamline Check-In</h4>
-        <p>When attendees arrive at your event, the event.cntxt mobile app will automatically check them in when they get within range of the event beacon.  After a quick verification by an event attendant, attendees are checked in and on their way in record timing.</p>
+        <p>When guests arrive at your event, the event.cntxt mobile app will automatically check them in when they get within range of the check-in beacon.  After a quick verification by an event attendant, guests are checked in and on their way in record timing.</p>
       </div>
     </div>
     <div class="col-sm-2">
@@ -29,7 +29,7 @@
           <i class="fa fa-line-chart fa-4x"></i>
         </div>
           <h4>Gather Live Data</h4>
-          <p>As people attend your event, beacons gather data about popular sites throughout the event.  View this data in easy to read charts on the event.cntxt web app to better understand your attendees needs and plan for your next event.</p>
+          <p>As people attend your event, beacons gather data about popular sites throughout the event.  View this data in easy to read charts on the event.cntxt web app to better understand your guest's needs and plan for your next event.</p>
       </div>
     </div>
     <div class="col-sm-1">
@@ -44,7 +44,7 @@
           <i class="fa fa-commenting-o fa-4x"></i>
         </div>
         <h4>Keep Everyone Up to Date</h4>
-        <p>Need to let everyone know something quickly? Push notifications through the event.cntxt mobile app to keep attendees up to the second on every detail.</p>
+        <p>Need to let everyone know something quickly? Push notifications through the event.cntxt mobile app to keep guests up to the second on every detail.</p>
       </div>
     </div>
     <div class="col-sm-2">
@@ -55,7 +55,7 @@
           <i class="fa fa-car fa-4x"></i>
         </div>
         <h4>Simplify Transportation</h4>
-        <p>The day of the event, users can request a Lyft within the app to take them exactly where they need to go.  No more parking issues, no more confusing directions.</p>
+        <p>The day of the event, users can request a Lyft within the event.cntxt app to take them exactly where they need to go.  No more parking issues, no more confusing directions.</p>
       </div>
     </div>
     <div class="col-sm-1">
@@ -72,17 +72,17 @@
     <div class="col-sm-5">
       <ol>
         <li>Register your event and your Estimote beacons with event.cntxt at event.cntxt.com.</li>
-        <li>Put the event.cntxt link we provide you with on your website and flyers for attendees to register at.</li>
-        <li>After attendees register, we will send them a link to download the event.cntxt mobile app.</li>
+        <li>Put the event.cntxt link we provide you with on your website and flyers for guests to register at.</li>
+        <li>After guests register, we will send them a link to download the event.cntxt mobile app.</li>
         <li>Once they sign into the app, your event will appear in their Upcoming Events.</li>
       </ol>
     </div>
 
     <div class="col-sm-5">
       <ol start="5">
-        <li>On the day of your event, set up your beacons at check-in and anywhere else you want to track foot-traffic.</li>
-        <li>Log onto your event.cntxt.com account and indicate which beacons you have set up where. </li>
-        <li>As attendees arrive, event.cntxt will check people in, track attendance, and record other data about your event.</li>
+        <li>On the day of your event, set up your beacons at check-in and any other sites where you want to track foot-traffic.</li>
+        <li>Log onto your event.cntxt.com account and indicate which beacons you have set up at which site. </li>
+        <li>As guests arrive, event.cntxt will check people in, track attendance, and record other data about your event.</li>
         <li>During or after your event, log onto your event.cntxt.com account to view the data we collected from your event!</li>
       </ol>
     </div>
