--- a/client/app/dashboard/event.html
+++ b/client/app/dashboard/event.html
@@ -22,8 +22,7 @@
       <md-card-title>
         <md-card-title-text>
 
-          <span class="md-totalCheckIn"><i class="fa fa-check fa-1.5x"></i>&nbsp **###** people have checked into your event. </span>
-          <span class="md-timeCheckIn"> <i class="fa fa-clock-o fa-1.5x"></i>&nbsp The earliest check-in time was **##:##**, and the latest was **##:##**.</span>
+          <span class="md-totalCheckIn"><i class="fa fa-check fa-1.5x"></i>&nbsp {{eventCtrl.checkInCount}} people have checked into your event. </span>
         </md-card-title-text>
       </md-card-title>
     </md-card>
