--- a/client/app/dashboard/myBeacons.html
+++ b/client/app/dashboard/myBeacons.html
@@ -1,5 +1,5 @@
 <md-toolbar layout="row" >
-  <div class="md-toolbar-tools">
+  <div class="md-toolbar-tools topbar">
     <span>My Beacons</span>
       <span class="fa fa-plus plusSign" ng-click="dashboardCtrl.openAddBeaconModal()"></span>
   </div>
